--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@
     margin-left: var(--margin);
 }
 .main-container__title {
+    text-align: center;
     font-size: 24px;
 }
 
@@ -28,31 +29,42 @@
     align-items: center;
     text-align: center;
 }
-
-.error-img {
-    width: 150px;
-    height: 150px;
+.error-img-container{
+    height: 15vw;
+    width: 15vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (max-width: 800px) {
-    .main-container__content__p {
-        margin-top: 4vh;
-    }
-    .error-img {
-        margin-top: 15vh;
-        width: 150px;
-        height: 150px;
+.error-img{
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+}
+
+@media (max-width: 700px) {
+    .error-img-container{
+        height: 27vh;
+        width: 27vw;
     }
 }
 @media (max-width: 300px) {
-    .error-img {
-        margin-top: 30vh;
-        width: 120px;
-        height: 120px;
+    .error-img-container{
+        height: 15vh;
+        width: 55vw;
     }
 }
 @media (max-width: 200px) {
-    .error-img {
-        margin-top: 60vh;
+    .error-img-container{
+        margin-top: 10vh;
+        height: 15vh;
+        width: 50vw;
+    }
+}
+@media (max-width: 200px) {
+    .error-img-container{
+        height: 100px;
+        width: 100px;
     }
 }
