--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+*{
+    margin : 0;
+    padding : 0;
+}
 .page {
     display: flex;
     width: 99vw;
@@ -14,8 +18,10 @@
     max-width: 550px;
     margin-right: var(--margin);
     margin-left: var(--margin);
+    height: auto;
 }
 .main-container__title {
+    margin-top: 1vh;
     text-align: center;
     font-size: 24px;
 }
@@ -29,41 +35,25 @@
     align-items: center;
     text-align: center;
 }
-.error-img-container{
+.image-container{
     height: 15vw;
     width: 15vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.error-img{
+.image{
     object-fit: contain;
     height: auto;
     max-width: 100%;
 }
 
-@media (max-width: 700px) {
-    .error-img-container{
-        height: 27vh;
-        width: 27vw;
+@media (max-width:700px) {
+    .image-container{
+        height: 150px;
+        width: 150px;
     }
 }
-@media (max-width: 300px) {
-    .error-img-container{
-        height: 15vh;
-        width: 55vw;
-    }
-}
-@media (max-width: 200px) {
-    .error-img-container{
-        margin-top: 25vh;
-        height: 15vh;
-        width: 50vw;
-    }
-}
-@media (max-width: 200px) {
-    .error-img-container{
+@media (max-width:300px) {
+    .image-container{
         height: 100px;
         width: 100px;
     }
