--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 }
 .main-container {
     --margin: 10vw;
-    margin-top: 15vh;
+    padding-top:2rem; 
     display: flex;
     flex-direction: column;
     align-items: center;
