--- a/src/styles.css
+++ b/src/styles.css
@@ -2,21 +2,25 @@
     margin : 0;
     padding : 0;
 }
+body{
+    display: grid;
+}
 .page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-self: center;
+    align-self: center;
 }
 .main-container {
-    --margin: 10vw;
-    padding-top:2rem; 
+    --side-margin : 10vw;
+    --padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     max-width: 550px;
-    margin-right: var(--margin);
-    margin-left: var(--margin);
+    margin-right: var(--side-margin);
+    margin-left: var(--side-margin);
+    padding-top: var(--padding);
+    padding-bottom: var(--padding);
 }
 .main-container__title {
     margin-top: 1vh;
@@ -39,7 +43,7 @@
 }
 
 .image{
-    object-fit: cover;
+    object-fit: contain;
     height: 100%;
     width: 100%;
 }
